show/hide available items

--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,12 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 20px;
-  padding: 0 20px;
+  padding: 0;
+}
+@media only screen and (max-width: 768px) {
+  .offers__settings {
+    padding: 0 20px;
+  }
 }
 
 .form__check {
@@ -473,6 +478,9 @@ body {
 }
 .card__item .card__item-img {
   height: 200px;
+}
+.card__item .car__sold {
+  display: none;
 }
 
 .card__item-block {
