--- a/scss/style.scss
+++ b/scss/style.scss
@@ -282,7 +282,10 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 20px;
-	padding: 0 20px;
+	padding: 0;
+	@include media(768px) {
+		padding: 0 20px ;
+	}
 }
 
 .form__check {
@@ -350,6 +353,10 @@ body {
 
 	.card__item-img {
 		height: 200px;
+	}
+
+	.car__sold {
+		display: none;
 	}
 }
 
