--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*-----RESET-----*/
 * {
   padding: 0;
@@ -453,6 +454,7 @@ body {
   color: #8D8D8D;
   border: none;
   background-color: transparent;
+  padding-left: 5px;
 }
 
 .offers__products {
@@ -464,6 +466,35 @@ body {
           justify-content: center;
   gap: 20px;
   padding: 0;
+}
+
+.sort__arrows {
+  position: relative;
+}
+.sort__arrows span {
+  font-size: 9px;
+  color: #8D8D8D;
+}
+.sort__arrows .arrow__up {
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+  position: absolute;
+  top: -5px;
+  left: 0px;
+  color: #DF4E3C;
+}
+.sort__arrows .arrow__up::before {
+  content: "➜";
+}
+.sort__arrows .arrow__down {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  position: absolute;
+  top: -1px;
+  left: 5px;
+}
+.sort__arrows .arrow__down::before {
+  content: "➜";
 }
 
 .hidden {
