--- a/scss/style.scss
+++ b/scss/style.scss
@@ -333,6 +333,7 @@ body {
 	color: $color-secondary-200;
 	border: none;
 	background-color: transparent;
+	padding-left: 5px;
 }
 
 .offers__products {
@@ -341,6 +342,34 @@ body {
 	justify-content: center;
 	gap: 20px;
 	padding: 0;
+}
+
+.sort__arrows {
+	position: relative;
+	span {
+		font-size: 9px;
+		color: $color-secondary-200;
+	}
+	.arrow__up {
+		transform: rotate(270deg);
+		position: absolute;
+		top: -5px;
+		left: 0px;
+		color: $color-primary-300;
+		&::before {
+			content: '\279C';
+		}
+	}
+	.arrow__down {
+		transform: rotate(90deg);
+		position: absolute;
+		top: -1px;
+		left: 5px;
+		&::before {
+			content: '\279C';
+		}
+	}
+
 }
 
 .hidden {
