--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,12 +2,6 @@
 @import "fonts";
 
 
-// $colorWhite: #fff;
-// $colorBlue: #1F65D9; 
-// $colorDarkBlue: #233148;
-// $colorLightGray: #8796AE;
-// $colorYellow: #FCCF18;
-
 $color-primary-100: #000000;
 $color-primary-200: #f8f8f8;
 $color-primary-300: #DF4E3C;
@@ -20,17 +14,17 @@ $color-secondary-600: #959595;
 $color-secondary-700: #507A36;
 
 $fontNotoBold: "Noto Sans Bold",
-sans-serif;
+	sans-serif;
 $fontNotoSemibold: "Noto Sans Semibold",
-sans-serif;
+	sans-serif;
 $fontNotoMedium: "Noto Sans Medium",
-sans-serif;
+	sans-serif;
 $fontNotoRegular: "Noto Sans Regular",
-sans-serif;
+	sans-serif;
 $fontNotoLight: "Noto Sans Light",
-sans-serif;
+	sans-serif;
 $fontPoppins: "Poppins",
-sans-serif;
+	sans-serif;
 
 @mixin media($media) {
 	@media only screen and (max-width: $media) {
@@ -182,6 +176,10 @@ body {
 	font-family: $fontNotoBold;
 	font-size: 50px;
 	padding: 0 0 32px 0;
+
+	@include media(768px) {
+		font-size: 46px;
+	}
 }
 
 .main__info-text {
@@ -229,8 +227,11 @@ body {
 	padding: 98px 15px 80px;
 	text-transform: uppercase;
 	font-weight: 700;
+
 	@include media(768px) {
-		padding: 40px 20px;
+		padding: 20px;
+		font-size: 46px;
+		line-height: 55px;
 	}
 }
 
@@ -243,9 +244,10 @@ body {
 }
 
 .offers__filters {
-	padding: 20px 0 ;
+	padding: 20px 0;
+
 	@include media(768px) {
-		padding: 0 20px ;
+		padding: 0 20px;
 	}
 }
 
@@ -258,7 +260,7 @@ body {
 	border-radius: 15px;
 }
 
-.offers__btn {
+.car__quantity-btn {
 	max-width: 290px;
 	width: 100%;
 	height: 48px;
@@ -273,7 +275,7 @@ body {
 	}
 
 	@include media(768px) {
-		margin: 0 0 20px ;
+		margin: 0 0 20px;
 	}
 }
 
@@ -283,8 +285,9 @@ body {
 	justify-content: space-between;
 	margin-bottom: 20px;
 	padding: 0;
+
 	@include media(768px) {
-		padding: 0 20px ;
+		padding: 0 20px;
 	}
 }
 
@@ -346,25 +349,30 @@ body {
 
 .sort__arrows {
 	position: relative;
+
 	span {
 		font-size: 9px;
 		color: $color-secondary-200;
 	}
+
 	.arrow__up {
 		transform: rotate(270deg);
 		position: absolute;
 		top: -5px;
 		left: 0px;
 		color: $color-primary-300;
+
 		&::before {
 			content: '\279C';
 		}
 	}
+
 	.arrow__down {
 		transform: rotate(90deg);
 		position: absolute;
 		top: -1px;
 		left: 5px;
+
 		&::before {
 			content: '\279C';
 		}
@@ -391,6 +399,7 @@ body {
 
 .card__item-block {
 	position: relative;
+
 	&.card__wrap-new:after {
 		content: "New";
 		position: absolute;
@@ -414,14 +423,14 @@ body {
 		left: 50%;
 		top: 50%;
 		z-index: 10;
-		transform: translate(-50%,-50%);
+		transform: translate(-50%, -50%);
 		font-family: $fontPoppins;
 		font-size: 50px;
 		font-weight: 700;
 		text-transform: uppercase;
 		color: $color-secondary-500;
-	} 
-	
+	}
+
 }
 
 
@@ -485,6 +494,7 @@ body {
 
 .subscribe__descr {
 	padding: 0;
+
 	@include media(768px) {
 		padding: 20px;
 	}
@@ -496,6 +506,7 @@ body {
 	gap: 20px;
 	font-family: $fontNotoRegular;
 	font-size: 15px;
+
 	@include media(768px) {
 		flex-direction: column;
 	}
@@ -508,7 +519,7 @@ body {
 		border: 1px solid $color-secondary-300;
 		border-radius: 15px;
 		line-height: 20px;
-		
+
 		&:focus {
 			border-color: $color-secondary-200;
 		}
@@ -520,6 +531,7 @@ body {
 		&--invalid {
 			border: 1px solid red;
 		}
+
 		@include media(768px) {
 			flex: 0;
 		}
@@ -549,8 +561,9 @@ body {
 
 .faq {
 	padding: 120px 0 150px;
+
 	@include media(768px) {
-		padding: 60px 20px;
+		padding: 40px 20px;
 	}
 
 	.faq__title {
@@ -560,8 +573,10 @@ body {
 		line-height: 75px;
 		text-transform: uppercase;
 		color: $color-secondary-100;
+
 		@include media(768px) {
-			font-size: 50px;
+			font-size: 46px;
+			line-height: 55px;
 		}
 	}
 
